# bmcforge

./: .gitignore  README.md  install.sh  instructions.md  pyproject.toml
src/bmcforge/: __init__.py  __main__.py
src/bmcforge/cli/: __init__.py  assets.py  config.py  content.py  main.py  panic.py  publish.py  scripts.py  shots.py
src/bmcforge/core/: __init__.py  config.py  database.py  models.py
src/bmcforge/services/: __init__.py  llm.py
src/bmcforge/services/publishers/: __init__.py  base.py  instagram.py  youtube.py
src/bmcforge/utils/: __init__.py  display.py
